Feat: improve home page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="invited_sessions">Invited Sessions</string>
     <string name="today_s_sessions">Today\'s Sessions</string>
     <string name="tab1">tab1</string>
+    <string name="game">Game</string>
+    <string name="create_new">Create new</string>
+    <string name="initial_game">All</string>
 </resources>
