--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="game">Game</string>
     <string name="create_new">Create new</string>
     <string name="initial_game">All</string>
+    <string name="create_label">Create</string>
+    <string name="create_a_new_game_session">Create a New Game Session</string>
+    <string name="number_of_players_required">N. Players</string>
+    <string name="done">Invite</string>
+    <string name="select_venue">Select Venue</string>
 </resources>
