--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="number_of_players_required">N. Players</string>
     <string name="done">Invite</string>
     <string name="select_venue">Select Venue</string>
+    <string name="cancel">Cancel</string>
 </resources>
