--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="menu_item_title_invites">Invitations</string>
     <string name="menu_item_title_my_events">My Events</string>
     <string name="event_info">No events happening around</string>
+    <string name="event_name">Your event name</string>
 </resources>
