--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="today_s_sessions">Today\'s Sessions</string>
     <string name="tab1">tab1</string>
     <string name="game">Game</string>
-    <string name="create_new">+ Create new</string>
+    <string name="create_new">Create new</string>
     <string name="initial_game">All</string>
     <string name="name">Name</string>
     <string name="age">Age</string>
